--- a/website/navbar.css
+++ b/website/navbar.css
@@ -30,7 +30,7 @@
 }
 .navbar-brand::before{
     content: '';
-    background-image: url(Logo.PNG);
+    /* background-image: url(Logo.PNG); */
     height: 35px;
     width: 35px;
     top: 10px;
