--- a/website/style.css
+++ b/website/style.css
@@ -12,20 +12,32 @@ body{
     display: flex;
     flex-direction: column;
 }
-.main-content {
+.sub-content{
     display: flex;
     justify-content: center;
     align-items: flex-start;
     height: 100%;
     left: 0;
     padding: 100px;
-    background-image: linear-gradient(176deg, #22313F 70%, #F4F4F4 calc(70% + 1px));
+    background-color: whitesmoke;
+}
+.sub-content p{
+    font-size: 22px;
+    color: #444;
+}
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100%;
+    left: 0;
+    padding: 100px 100px 20px 100px;
+    background-color: #22313F;
 
 }
 .main-content img{
-    background-image: url(devices.svg);
     width: 40%;
-    padding-bottom: 40%;
+    min-width: 300px;
     /* height: 40%; */
     background-size: contain;
     background-repeat: no-repeat;
@@ -38,7 +50,7 @@ body{
     justify-content: center;
     align-items: center;
     padding-top: 20px;
-    margin-right: 100px;
+    /* margin-right: 100px; */
 }
 .introduction h1{
     font-size: 50px;
@@ -49,7 +61,7 @@ body{
 .introduction p{
     width: 100%;
     font-size: 30px;
-    color: whitesmoke;
+    color: gainsboro;
     margin-bottom: 100px;
 }
 .button{
