--- a/website/navbar.css
+++ b/website/navbar.css
@@ -21,7 +21,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    
+    align-self: flex-start;
     font-size: 35px;
     text-decoration: none;
     cursor: pointer;
@@ -30,7 +30,7 @@
 }
 .navbar-brand::before{
     content: '';
-    /* background-image: url(Logo.PNG); */
+    background-image: url(Logo_Corped.png);
     height: 35px;
     width: 35px;
     top: 10px;
@@ -42,6 +42,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    align-self: center;
     font-size: 25px;
     text-decoration: none;
     cursor: pointer;
