--- a/website/style.css
+++ b/website/style.css
@@ -31,7 +31,7 @@ body{
     align-items: flex-start;
     height: 100%;
     left: 0;
-    padding: 100px 100px 20px 100px;
+    padding: 50px 100px 20px 100px;
     background-color: #22313F;
 
 }
@@ -39,6 +39,7 @@ body{
     width: 40%;
     min-width: 300px;
     /* height: 40%; */
+    align-self: center;
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 100px;
@@ -49,6 +50,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
     padding-top: 20px;
     /* margin-right: 100px; */
 }
