--- a/website/navbar.css
+++ b/website/navbar.css
@@ -1,6 +1,7 @@
 .navbar-container{
     display: flex;
-    position: relative;
+    position: fixed;
+    z-index: 100;
     top: 0;
     left: 0;
     width: 100%;
